# stacked-pr-manager

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  main.py  manager.py  pyproject.toml  requirements.txt
src/cli/: ask_for_prs_review.py  create_prs.py  pr_chain_merge_base_into_head.py  pr_chain_push.py  rename_prs.py  sync_prs.py
src/config/: env_vars.py  logger.py
src/models/: types.py
src/models/types/: __init__.py  branch.py
src/utils/: gh.py  gh_utils.py  git.py  github.py  other.py  pr_chain.py  read_files.py
