[tool.poetry]
name = "stacked-pr-manager"
version = "0.1.0"
description = "CLI tool to manage stacked Pull Requests"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
PyGithub = "^1.59.0"
dirhash = "^0.2.1"
"ruamel.yaml" = "^0.17.32"
loguru = "^0.7.0"
click = "^8.1.3"
questionary = "^2.0.0"
pydantic = "<2"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
